--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-asgiref==3.7.2
-Django==4.2.3
-django-truncate==0.1
-pdfkit==1.0.0
-sqlparse==0.4.4
-typing_extensions==4.7.1
-tzdata==2023.3
+asgiref
+Django
+django-truncate
+pdfkit
+sqlparse
+typing_extensions
+tzdata
 gunicorn
